Fix spelling of excercise -> exercise
Very pedantic! Ensure that the correct "exercise" spelling is used
throughout.

Before (ignoring stuff in ./.git):
```bash
:> grep -irn xcercise .
./.answers/03.broken_function.py:48:def extension_excercise(name: Union[str, list ]) -> str:
./.answers/03.broken_function.py:63:    print(extension_excercise(case))
./.answers/03.broken_function.py.diff:18:-def extension_excercise(name):
./.answers/03.broken_function.py.diff:22:+def extension_excercise(name: Union[str, list ]) -> str:
./03.broken_function.py:5:By the end of this excercise you should be able to use MyPy
./03.broken_function.py:46:def extension_excercise(name):
./03.broken_function.py:61:    print(extension_excercise(case))
./04.add_typing.py:5:By the end of this excercise you should be able to add more complex
./README.md:16:- Two excercise scripts.
./README.md:94:3. [Excercise 1: Make a broken function fail MyPy validation](03.broken_function.py) ([Answers](answers/03.broken_function.py.diff))
./README.md:95:4. [Excercise 2: Use MyPy on some example legacy code.](04.add_typing.py) ([Answers](.answers/04.add_typing.py.diff))
./slides.html:102:<li>Two excercise scripts.</li>
./slides.html:154:<li><a href="03.broken_function.py">Excercise 1: Make a broken function fail MyPy validation</a> (<a href="answers/03.broken_function.py.diff">Answers</a>)</li>
./slides.html:155:<li><a href="04.add_typing.py">Excercise 2: Use MyPy on some example legacy code.</a> (<a href=".answers/04.add_typing.py.diff">Answers</a>)</li>
```

After (ignoring stuff in ./.git):
```bash
:> grep -irn xcercise .
:>
```

--- a/slides.html
+++ b/slides.html
@@ -99,7 +99,7 @@
 <ul>
 <li>Why bother with MyPy.</li>
 <li>Two example scripts.</li>
-<li>Two excercise scripts.</li>
+<li>Two exercise scripts.</li>
 </ul>
 </section>
 <section class="slide level1">
@@ -151,8 +151,8 @@
 <ol type="1">
 <li><a href="01.basic_syntax.py">Brief introduction to the syntax.</a> (<a href=".answers/01.basic_syntax.py.diff">Answers</a>)</li>
 <li><a href="02.real_world_example.py">An example where type annotation would have made my life better.</a> (<a href=".answers/02.real_world_example.py.diff">Answers</a>)</li>
-<li><a href="03.broken_function.py">Excercise 1: Make a broken function fail MyPy validation</a> (<a href="answers/03.broken_function.py.diff">Answers</a>)</li>
-<li><a href="04.add_typing.py">Excercise 2: Use MyPy on some example legacy code.</a> (<a href=".answers/04.add_typing.py.diff">Answers</a>)</li>
+<li><a href="03.broken_function.py">Exercise 1: Make a broken function fail MyPy validation</a> (<a href="answers/03.broken_function.py.diff">Answers</a>)</li>
+<li><a href="04.add_typing.py">Exercise 2: Use MyPy on some example legacy code.</a> (<a href=".answers/04.add_typing.py.diff">Answers</a>)</li>
 </ol>
 </section>
     </div>
