--- a/slides.html
+++ b/slides.html
@@ -147,6 +147,18 @@
 <section class="slide level1">
 
 <p>Ultimately though, MyPy is optional. You can have both static and dynamic typing for different bits of the same script!</p>
+</section>
+<section class="slide level1">
+
+<h2 id="how-to-get-a-copy-of-this-repo">How to get a copy of this repo:</h2>
+<p>Either:</p>
+<ol type="1">
+<li><a href="https://github.com/wxtim/learn-mypy/archive/refs/heads/master.zip">Use this link to download and unzip</a> in a location of your choice.</li>
+<li>On the command line: <code>git clone https://github.com/wxtim/learn-mypy.git</code>. Then <code>cd learn-mypy</code>.</li>
+</ol>
+</section>
+<section class="slide level1">
+
 <h2 id="examples-of-mypy">Examples of MyPy</h2>
 <ol type="1">
 <li><a href="01.basic_syntax.py">Brief introduction to the syntax.</a> (<a href=".answers/01.basic_syntax.py.diff">Answers</a>)</li>
